src/main/fabric8/jolokia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-jolokia
spec:
  ports:
  - name: jolokia
    port: 8778
    targetPort: 8778
  selector:
    app: ${project.artifactId}
