src/main/fabric8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: ${project.artifactId}
