src/main/fabric8/jolokia-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: ${project.artifactId}-jolokia
spec:
  to:
    name: ${project.artifactId}-jolokia
  tls:
      termination: passthrough
